--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c09f7f">  <td>20/09/04 13:48:51</td>   <td>0</td> <td title="&gt;&gt;AbstractTest.beforeTestGlobal()[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">&gt;&gt;beforeTestGlobal</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/09/04 13:48:52</td>   <td>476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.register(java.lang.String, pojo.UserRegisterationData)[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">register</td> 
-  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/09/04 13:49:37</td>   <td>46160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.cleanup()[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/09/04 13:49:37</td>   <td>46161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.register(java.lang.String, pojo.UserRegisterationData)[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">register</td> 
-  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/09/04 13:50:20</td>   <td>88869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.cleanup()[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/09/04 13:50:20</td>   <td>88869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.register(java.lang.String, pojo.UserRegisterationData)[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">register</td> 
-  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/09/04 13:51:01</td>   <td>129669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.cleanup()[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>20/09/04 13:51:01</td>   <td>129955</td> <td title="&lt;&lt;AbstractTest.afterTest()[pri:0, instance:com.sap.convai.test.SampleTest@797badd3]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/09/07 08:10:34</td>   <td>0</td> <td title="&gt;&gt;AbstractTest.beforeTestGlobal()[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">&gt;&gt;beforeTestGlobal</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/09/07 08:10:35</td>   <td>708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.register(java.lang.String, pojo.UserRegisterationData)[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">register</td> 
+  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/09/07 08:10:57</td>   <td>23589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.cleanup()[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/09/07 08:10:57</td>   <td>23592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.register(java.lang.String, pojo.UserRegisterationData)[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">register</td> 
+  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/09/07 08:11:12</td>   <td>38254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.cleanup()[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/09/07 08:11:12</td>   <td>38254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.register(java.lang.String, pojo.UserRegisterationData)[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">register</td> 
+  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/09/07 08:11:29</td>   <td>54733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.cleanup()[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1426329391</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/09/07 08:11:29</td>   <td>54758</td> <td title="&lt;&lt;AbstractTest.afterTest()[pri:0, instance:com.sap.convai.test.SampleTest@19dc67c2]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1426329391</td>   <td></td> </tr>
 </table>
